<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_delivery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.beogotechnologies.deliverymanager_mobileapp.activities.admin.NewDeliveryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scrollbars="none">

        <!-- Date and hour -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblSendDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/lblSendDate"/>

            <EditText
                android:id="@+id/txtSendDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="date"/>

            <TextView
                android:id="@+id/lblSender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/lblClient"/>

            <Spinner
                android:id="@+id/spSender"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_white_rectangle"/>

            <TextView
                android:id="@+id/lblReceiver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/lblReceiver"/>

            <EditText
                android:id="@+id/txtReceiver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                />

            <TextView
                android:id="@+id/lblReceiverNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/lblReceiverNumber"/>

            <EditText
                android:id="@+id/txtReceiverNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                />

            <TextView
                android:id="@+id/lblDeliveryType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/lblDeliveryType"/>

            <EditText
                android:id="@+id/txtDeliveryType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                />

            <TextView
                android:id="@+id/lblReceiverAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/lblReceiverAddress"/>

            <EditText
                android:id="@+id/txtReceiverAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"/>

            <TextView
                android:id="@+id/lblSenderReferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/lblSenderReferences"/>

            <EditText
                android:id="@+id/txtSenderReferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"/>

            <TextView
                android:id="@+id/lblSenderComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/lblComments"/>

            <EditText
                android:id="@+id/txtSenderComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"/>

            <TextView
                android:id="@+id/lblDeliverName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/lblDeliverName"/>

            <Spinner
                android:id="@+id/spDeliver"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_white_rectangle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="30dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:onClick="saveNewDelivery"
                    android:text="@string/lblNewDelivery"
                    android:theme="@style/SubmitButton"
                    />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="30dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:onClick="cancel"
                    android:text="@string/lblCancel"
                    android:textColor="@color/colorWhite"
                    android:theme="@style/CancelButton"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
