<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start_delivery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.beogotechnologies.deliverymanager_mobileapp.activities.employee.StartDeliveryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Date and hour -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lblSendDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:id="@+id/lblSendDate"
                android:fontFamily="sans-serif-smallcaps"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txtSendDate"
                android:inputType="date"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <TextView
                android:text="@string/lblClientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="15dp"
                android:id="@+id/lblSenderName"
                android:fontFamily="sans-serif-smallcaps"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txtSenderName"
                android:inputType="text"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <TextView
                android:text="@string/lblClientNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:id="@+id/lblSenderNumber"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-smallcaps"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txtSenderNumber"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="number"/>

            <TextView
                android:text="@string/lblClientAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="15dp"
                android:id="@+id/lblSenderAddress"
                android:fontFamily="sans-serif-smallcaps"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txtSenderAddress"
                android:inputType="text"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <TextView
                android:text="@string/lblReceiver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblReceiver"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-smallcaps"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/txtReceiver"/>

            <TextView
                android:text="@string/lblReceiverNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblReceiverNumber"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-smallcaps"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtReceiverNumber"
                />

            <TextView
                android:text="@string/lblReceiverAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblReceiverAddress"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-smallcaps"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/txtReceiverAddress"/>

            <TextView
                android:text="@string/lblSenderReferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblSenderReferences"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-smallcaps"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/txtSenderReferences"/>

            <TextView
                android:text="@string/lblComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblSenderComments"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-smallcaps"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/txtSenderComments"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="30dp"
                    android:layout_height="60dp"
                    android:onClick="startDelivery"
                    android:text="@string/lblStartDelivery"
                    android:theme="@style/SubmitButton"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-smallcaps"/>

                <Button
                    android:text="@string/lblCancel"
                    android:layout_width="30dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:id="@+id/btnCancel"
                    android:layout_weight="1"
                    android:theme="@style/CancelButton"
                    android:textColor="@color/colorWhite"
                    android:onClick="cancel"
                    android:fontFamily="sans-serif-smallcaps"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
